--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,103 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0,\n",
-       " 1,\n",
-       " 3,\n",
-       " 5,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 11,\n",
-       " 12,\n",
-       " 14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 19,\n",
-       " 20,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 28,\n",
-       " 29,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59,\n",
-       " 60,\n",
-       " 61,\n",
-       " 62,\n",
-       " 64,\n",
-       " 65,\n",
-       " 66,\n",
-       " 67,\n",
-       " 69,\n",
-       " 72,\n",
-       " 73,\n",
-       " 74,\n",
-       " 75,\n",
-       " 76,\n",
-       " 77,\n",
-       " 79,\n",
-       " 80,\n",
-       " 82,\n",
-       " 83,\n",
-       " 85,\n",
-       " 86,\n",
-       " 87,\n",
-       " 88,\n",
-       " 89,\n",
-       " 90,\n",
-       " 91,\n",
-       " 92,\n",
-       " 93,\n",
-       " 94,\n",
-       " 95,\n",
-       " 96,\n",
-       " 98,\n",
-       " 99}"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
-    "set1 =  set(sample_list_1)\n",
-    "set1"
+    "set1 =  set(sample_list_1)\n"
    ]
   },
   {
@@ -171,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0, 1, 11, 19, 31, 48, 59, 62, 64, 76, 80, 90, 91, 92, 93, 94}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "set3 = set1 - set2\n"
@@ -233,20 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{4, 6, 13, 21, 27, 30, 37, 41, 55, 56, 63, 68, 70, 71, 78, 84}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "set4 = set2 - set1\n"
@@ -261,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +184,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +250,7 @@
        "True"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -421,6 +308,7 @@
       "text/plain": [
        "{0,\n",
        " 1,\n",
+       " 2,\n",
        " 3,\n",
        " 4,\n",
        " 5,\n",
@@ -436,6 +324,7 @@
        " 15,\n",
        " 16,\n",
        " 17,\n",
+       " 18,\n",
        " 19,\n",
        " 20,\n",
        " 21,\n",
@@ -466,7 +355,6 @@
        " 46,\n",
        " 47,\n",
        " 48,\n",
-       " 49,\n",
        " 50,\n",
        " 51,\n",
        " 52,\n",
@@ -475,7 +363,6 @@
        " 55,\n",
        " 56,\n",
        " 57,\n",
-       " 58,\n",
        " 59,\n",
        " 60,\n",
        " 61,\n",
@@ -484,11 +371,9 @@
        " 64,\n",
        " 65,\n",
        " 66,\n",
-       " 67,\n",
        " 68,\n",
        " 69,\n",
        " 70,\n",
-       " 71,\n",
        " 72,\n",
        " 73,\n",
        " 74,\n",
@@ -498,6 +383,7 @@
        " 78,\n",
        " 79,\n",
        " 80,\n",
+       " 81,\n",
        " 82,\n",
        " 83,\n",
        " 84,\n",
@@ -506,18 +392,18 @@
        " 87,\n",
        " 88,\n",
        " 89,\n",
-       " 90,\n",
        " 91,\n",
        " 92,\n",
        " 93,\n",
        " 94,\n",
        " 95,\n",
        " 96,\n",
+       " 97,\n",
        " 98,\n",
        " 99}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,26 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-153-5899787a5169>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlist_to_remove\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m21\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m29\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m41\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m49\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m51\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m59\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m61\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m69\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m71\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m79\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m81\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m89\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m91\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m99\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mset1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_to_remove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
     "set1 = list(set1)\n",
-    "set1.remove(list_to_remove())"
+    "\n",
+    "for item in set1:\n",
+    "    if item in list_to_remove:\n",
+    "        set1.remove(item)\n"
    ]
   },
   {
