--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -21,19 +21,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "lst = [1,2,3,4]\n",
+    "lmbda = lambda x: x +1\n",
+    "\n",
     "def modify_list(lst, lmbda):\n",
     "    \"\"\"\n",
     "    Input: list and lambda expression\n",
     "    \n",
     "    Output: the transformed list\n",
     "    \"\"\"\n",
-    "    \n",
+    "  \n",
     "    #your code here:\n",
-    "    \n"
+    "    \n",
+    "    #variable = []\n",
+    "    #for i in lst:\n",
+    "        #variable.append(lmbda(i))\n",
+    "    #return variable\n",
+    "    \n",
+    "    variable = [lmbda(x) for x in lst]\n",
+    "    return variable\n",
+    "    \n",
+    "modify_list(lst, lmbda)"
    ]
   },
   {
@@ -47,12 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "lmbda = lambda x: x + 273.15"
    ]
   },
   {
@@ -64,13 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "modify_list(temps, lmbda)\n",
+    "\n"
    ]
   },
   {
@@ -84,11 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\"\"\"\n",
+    "def divisible (num_1, num_2):\n",
+    "    if num_1%num_2:\n",
+    "        resultado = 0\n",
+    "    else:\n",
+    "        resultado = 1\n",
+    "        \n",
+    "    return resultado \n",
+    "\n",
+    "divisible(10,2)\n",
+    "\"\"\"\n",
+    "mod = lambda divisor, dividend: 1 if divisor%dividend == 0 else 0"
    ]
   },
   {
@@ -102,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +161,7 @@
     "    input: a number\n",
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Your code here:"
+    "    return lambda a: mod(b,a)\n"
    ]
   },
   {
@@ -124,11 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "divisor(5)(5)"
    ]
   },
   {
@@ -140,18 +200,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -169,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +260,7 @@
        "[(1,), (2,), (3,), (4,), (5,)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,14 +282,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Green', 'eggs'),\n",
+       " ('cheese', 'cheese'),\n",
+       " ('English', 'cucumber'),\n",
+       " ('tomato', 'tomato')]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
     "\n",
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "new_list = lambda list_A, list_B:[x for x in zip(list_A,list_B)]\n",
+    "\n",
+    "#list(zip(list1,list2))\n",
+    "\n",
+    "new_list(list1,list2)\n"
    ]
   },
   {
@@ -223,14 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Political Science', 'Essay'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Engineering', 'Lab'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
+    "# Your code here:\n",
     "\n",
-    "# Your code here:\n"
+    "new_list(list1,list2)\n",
+    "#sort = lambda word: word[1][0]\n",
+    "\n",
+    "sorted(new_list(list1,list2), key = lambda word: word[1][0])\n"
    ]
   },
   {
@@ -244,14 +364,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Toyota', 1995), ('Honda', 1997), ('Audi', 2001), ('BMW', 2005)]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "tuples = [(k, d[k]) for k in d]\n",
+    "def sort(x):\n",
+    "    return x [1]\n",
+    "\n",
+    "\n",
+    "tuples = sorted(tuples, key = sort)\n",
+    "\n",
+    "tuples"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -277,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
